# filecounterapp

filecount/: CMakeLists.txt
filecount/config/: configapp.txt  configuration.h
filecount/config/template/: CONF_COUNT_LINE_BY_TYPE.template  CONF_FILE_FORMAT.template  CONF_SHOW_MAX_SIZE.template  CONF_SHOW_MIN_SIZE.template  CONF_USE_BINARY_ORDER.template  CONF_USE_CSV_ORDER.template  CONF_WATCH_DIR.template
filecount/include/: build_configuration.h
filecount/src/: build_configuration.c  main.c
filecount/tests/test_read_config/: run_test.c
